--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -9,15 +9,15 @@ jobs:
     name: build
     runs-on: [self-hosted]
     steps:
-      # - name: checkout the code
-      #   uses: actions/checkout@v4
-      #   with:
-      #     fetch-depth: 0
-      # - name: BUilding code and analyze with SonarQube
-      #   uses: actions/checkout@master
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - name: checkout the code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: BUilding code and analyze with SonarQube
+        uses: actions/checkout@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       - name: dependencies install
         run: |
           npm install
