--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -27,7 +27,7 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - name: docker pull
-        run: docker pull manlineroot12/zomato:latest
+        run: sudo docker pull manlineroot12/zomato:latest
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
